[package]
name = "forte_core"
version = "0.1.0"
authors = ["Mcat12 <newtoncat12@yahoo.com>", "0xcaff <martincharles07@gmail.com>"]
autobins = false

[profile.release]
lto = true

[[bin]]
name = "forte"
path = "src/bin/main.rs"

[features]
embed_web = ["rust-embed"]

[dependencies]
r2d2 = "0.8"
r2d2-diesel = "1.0"
diesel_migrations = "1.3"
diesel = { version = "1.3", features = ["sqlite", "chrono"] }
chrono = "0.4"
uuid = { version = "0.6", features = ["v4", "serde"] }
actix = "0.7"
actix-web = "0.7"
http-range = "0.1"
bytes = "0.4"
rand = "0.5"
lru-disk-cache = "0.2"
futures-cpupool = "0.1"
tokio-process = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.9"
mime_guess = "1.8"
taglib2-sys = { path = "taglib2-sys" }
image = "0.19"
walkdir = "2.2"
indicatif = { git = "https://github.com/mitsuhiko/indicatif.git", rev = "950091d1b1683a88e01c4d4975f591009f56322b" }
structopt = "0.2"
app_dirs = "1.2"
futures = "0.1"
error-chain = "0.12"
rust-embed = { version = "3.0", optional = true }
