[package]
name = "forte_core"
version = "0.1.0"
authors = ["Mcat12 <newtoncat12@yahoo.com>", "0xcaff <martincharles07@gmail.com>"]
autobins = false
edition = "2018"

[workspace]
members = [
    "taglib2-sys",
    "fixture_setup"
]

[profile.release]
lto = true

[[bin]]
name = "forte"
path = "src/bin/main.rs"

[features]
embed_web = ["rust-embed"]

[dependencies]
r2d2 = "0.8"
r2d2-diesel = "1.0"
diesel_migrations = "1.4"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
actix-files = "0.5"
actix-web = "3.3"
http-range = "0.1"
bytes = "1.0"
rand = "0.8"
lru-disk-cache = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["process"] }
juniper = "0.15"
juniper_actix = "0.2"
mime_guess = "2.0"
taglib2-sys = { path = "taglib2-sys" }
image = "0.23"
walkdir = "2.3"
indicatif = "0.15"
structopt = "0.3"
app_dirs = "1.2"
futures = "0.3"
error-chain = "0.12"
rust-embed = { version = "5.7", optional = true }
