[package]
name = "forte_core"
version = "0.1.0"
authors = ["Mcat12 <newtoncat12@yahoo.com>", "0xcaff <martincharles07@gmail.com>"]
autobins = false
edition = "2018"

[workspace]
members = [
    "taglib2-sys",
    "fixture_setup"
]

[profile.release]
lto = true

[[bin]]
name = "forte"
path = "src/bin/main.rs"

[features]
embed_web = ["rust-embed"]

[dependencies]
actix-files = "0.5"
actix-web = "3.3"
app_dirs = "1.2"
bytes = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"
futures = "0.3"
http-range = "0.1"
image = "0.23"
indicatif = "0.15"
juniper = "0.15"
juniper_actix = "0.2"
lru-disk-cache = { git = "https://github.com/xvello/lru-disk-cache", branch = "main" }
mime_guess = "2.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rand = "0.8"
rust-embed = { version = "5.7", optional = true }
send_wrapper = "0.5"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
taglib2-sys = { path = "taglib2-sys" }
thiserror = "1.0"
tokio = { version = "1.1", features = ["process"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
walkdir = "2.3"
