[package]
name = "fixture_setup"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>", "0xcaff <martincharles07@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0", features = ["sqlite"] }
forte_core = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dotenv = "0.15"
error-chain = "0.12"
r2d2 = "0.8"
chrono = "0.4"
