[package]
name = "fixture_setup"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>", "0xcaff <martincharles07@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
forte_core = { path = ".." }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
